// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GqlCSS it renders component with styles 1`] = `
<div>
  <div
    class="x0 x1 x2 x3"
  >
    Using component with styles
  </div>
</div>
`;

exports[`GqlCSS it renders component without styles 1`] = `
<div>
  <div
    class=""
  >
    Using component without styles
  </div>
</div>
`;

exports[`useGqlCSS with GqlCSS it supports variables and stateful components 1`] = `
<div>
  <div
    class="x4 x5 x6 x7"
    data-testid="stateful-component"
  >
    Using stateful component
  </div>
</div>
`;

exports[`useGqlCSS with GqlCSS it supports variables and stateful components 2`] = `
<div>
  <div
    class="x4 x9 x6 x7"
    data-testid="stateful-component"
  >
    Using stateful component
  </div>
</div>
`;

exports[`useGqlCSS with styled it fails if interpolation is null 1`] = `
<div>
  <div
    class=""
  >
    Some heading
  </div>
</div>
`;

exports[`useGqlCSS with styled it fails if props don't exist 1`] = `
<div>
  <div
    class=""
  >
    Some heading
  </div>
</div>
`;

exports[`useGqlCSS with styled it handles style interpolation 1`] = `
<div>
  <h3
    class="x8"
  >
    Some heading
  </h3>
</div>
`;

exports[`useGqlCSS with styled it returns a styled component 1`] = `
<div>
  <h2
    class="x0 x1 x2 x3"
  >
    Some heading
  </h2>
</div>
`;

exports[`useGqlCSS with styled it supports variables and stateful components 1`] = `
<div>
  <div
    class="x4 x5 x6 x7 x8"
  >
    Other component sharing state
  </div>
</div>
`;

exports[`useGqlCSS with styled it supports variables and stateful components 2`] = `
<div>
  <div
    class="x4 x9 x6 x7 x8"
  >
    Other component sharing state
  </div>
</div>
`;
